--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="canonical" href="https://ayoubnaceur.github.io/the-ten-readings/" />
     <link href="src/assets/css/main.css" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="manifest.json" />
     <title>متصفح السلسلة الفراتية</title>
@@ -562,6 +564,11 @@
         </div>
       </div>
     </div>
+    <script>
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register('/service-worker.js', {scope: '/'})
+      }
+    </script>
 
     <script src="./src/scripts.js" type="text/javascript"></script>
   </body>
