update the path

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     </div>
     <script>
       if (navigator.serviceWorker) {
-        navigator.serviceWorker.register('/service-worker.js', {scope: '/the-ten-readings/'})
+        navigator.serviceWorker.register('/the-ten-readings/service-worker.js', {scope: '/the-ten-readings/'})
       }
     </script>
 
