bad commit: splite the js files to be confortrable in editing, update inputs with the correct type (search), update last pages for every rawi, remove the swipe up and down actions, close the menues in case of mobile view direcly after navigation

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
               <div class="searchbox" id="searchbox">
                 <label hidden>searchbox-input</label>
-                <input placeholder="البحث في المصحف" id="searchbox-input" type="text" />
+                <input placeholder="البحث في المصحف" id="searchbox-input" type="search" />
                 
                 <div class="filter" id="filter">
                   <div class="f_part">
@@ -326,7 +326,7 @@
                   <div class="filter_filter">
                     <div>
                       <label for="filter_parts" hidden="">Choose your f_part from the list:</label>
-                      <input placeholder="البحث في الفهرس" name="part" id="filter-parts" />
+                      <input placeholder="البحث في الفهرس" name="part" id="filter-parts" type="search" />
                     </div>
                     <!-- <div class="f_aya">
                       <label for="f_aya" hidden="">Choose your f_aya from the list:</label>
@@ -570,6 +570,7 @@
       }
     </script>
 
-    <script src="./src/scripts.js" type="text/javascript"></script>
+    <script src="./src/quran.js" type="text/javascript"></script>
+    <script src="./src/main.js" type="text/javascript"></script>
   </body>
 </html>
