update website title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://ayoubnaceur.github.io/the-ten-readings/" />
     <link href="src/assets/css/main.css" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="manifest.json" />
-    <title>متصفح السلسلة الفراتية</title>
+    <title>القرءان العظيم</title>
   </head>
   <body>
     <div class="global-container">
