update mobile swipe gesture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json" />
     <title>القرءان العظيم</title>
   </head>
-  <body>
+  <body data-swipe-threshold="100">
     <div class="global-container">
       <div class="main-menu">
         <div class="main-menu-tools">
@@ -577,6 +577,7 @@
       }
     </script>
 
+    <script src="./src/swiped-events.min.js" type="text/javascript"></script>
     <script src="./src/quran.js" type="text/javascript"></script>
     <script src="./src/main.js" type="text/javascript"></script>
   </body>
