done mapping subjet in exception of pages : 582, ..., 591, because of an issue had happned at extracting data time

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
       <main class="main">
         <div class="quran-container">
           <div class="quran-wrapper">
-            <div id="quran" class="quran"></div>
+            <div id="quran-grid" class="quran"></div>
             <div id="selectedRawiLabel" class="selected-rawi-label"></div>
-            <div id="loading" class="loading-layer">جاري تحميل الوجه</div>
+            <div id="loading" class="loading-layer">جاري التحميل</div>
             <canvas id="imge"></canvas>
           </div>
         </div>
