--- a/index.html
+++ b/index.html
@@ -281,10 +281,16 @@
         </div>
         <div class="main-navigation">
           <div class="as-b">
-            <div class="main-navigation-r-menu"><button >
+            <div class="main-navigation-r-menu">
+              <button >
               <!--?xml version="1.0" ?--><svg height="21" viewBox="0 0 21 21" width="21" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" transform="translate(2 2)"><path d="m.5 8.5 8 4 8.017-4"></path><path d="m.5 12.5 8 4 8.017-4"></path><path d="m.5 4.657 8.008 3.843 8.009-3.843-8.009-4.157z"></path></g></svg>
-            </button></div>
-            <div></div>
+              </button>
+            </div>
+            <div>
+              <button id="expan-toggle-button">
+                <svg fill="#000000" height="20px" width="20px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 242.133 242.133" xml:space="preserve"> <path id="XMLID_13_" d="M227.133,83.033c8.284,0,15-6.716,15-15V15c0-8.284-6.716-15-15-15H174.1c-8.284,0-15,6.716-15,15 s6.716,15,15,15h16.821l-59.246,59.247c-5.858,5.857-5.858,15.355,0,21.213c2.929,2.929,6.768,4.394,10.606,4.394 c3.839,0,7.678-1.465,10.606-4.394l59.245-59.245v16.818C212.133,76.317,218.849,83.033,227.133,83.033z"/> <path id="XMLID_14_" d="M110.46,131.673c-5.857-5.858-15.354-5.858-21.213,0L30,190.92V174.1c0-8.284-6.716-15-15-15 s-15,6.716-15,15v53.032c0,8.284,6.715,15,15,15l53.033,0.001l0,0c8.283,0,15-6.716,15-15c0-8.284-6.715-15-15-15h-16.82 l59.247-59.247C116.318,147.028,116.318,137.53,110.46,131.673z"/> </svg>
+              </button>
+            </div>
             <div><button id="privouos">➡️ السابقة</button></div>
           </div>
           <div class="as-m"><input inputmode="numeric" type="search" placeholder="رقم الصفحة"min="-3" id="page"></div>
@@ -315,7 +321,7 @@
               <div class="searchbox" id="searchbox">
                 <!-- search input  -->
                 <label hidden>searchbox-input</label>
-                <input placeholder="البحث في المصحف" id="searchbox-input" type="search" />
+                <input placeholder="البحث في المصحف، 5 أحرف أو أكثر" id="searchbox-input" type="search" />
                 
                 <!-- fahrass + filter -->
                 <div class="filter" id="filter">
