--- a/index.html
+++ b/index.html
@@ -253,6 +253,23 @@
                       <button id="R101" class="raw">رواية إسحاق</button>
                     </div>
                     <div class="imam-sub">
+                      <div class="imam">
+                        <div class="imam-self"><button disabled="">رواية إدريس</button></div>
+                        <div class="imam-subs">
+                          <div class="imam-sub">
+                            <button id="R1021" class="raw">رواية إدريس</button>
+                          </div>
+                          <div class="imam-sub">
+                            <button id="R1022" class="raw">رواية إدريس بالسكت العام</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="tool tool-closed" style=""> 
             <div class="tool-header">
               <div class="tool-title" title="وسائل التواصل">
