--- a/index.html
+++ b/index.html
@@ -29,9 +29,22 @@
                 مصاحف القراء العشرة ورواتهم
               </div>
               <div class="tool-actions">
-                <button class="expander tool-collapse" >
+                <button class="tool-action tool-setting" >
+                  ≡≡≡
+                </button>
+                <button class="tool-action tool-collapse" >
                   <?xml version="1.0" ?><svg height="20" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><polygon points="12 19.24 7.05 14.29 5.64 15.71 12 22.07 18.36 15.71 16.95 14.29 12 19.24"/><polygon points="5.64 8.29 7.05 9.71 12 4.76 16.95 9.71 18.36 8.29 12 1.93 5.64 8.29"/></svg>
                 </button>
+              </div>
+            </div>
+            <div class="tool-settings">
+              <div class="setting">
+                <div class="setting-header">
+                  مصدر مجلد المصاحف (أترك القيمة فارغة من أجل إستخدام القيمة الإفتراضية)
+                </div>
+                <div class="setting-body">
+                  <input class="setting-mushaf-url" id="setting-mushafs-folder" type="url" placeholder="file:///D:/quran/qurans/" >
+                </div>
               </div>
             </div>
             <div class="tool-body" style="padding: 0;">
@@ -276,7 +289,7 @@
                 وسائل التواصل
               </div>
               <div class="tool-actions">
-                <button class="expander tool-collapse" >
+                <button class="tool-action tool-collapse" >
                   <?xml version="1.0" ?><svg height="20" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><polygon points="12 19.24 7.05 14.29 5.64 15.71 12 22.07 18.36 15.71 16.95 14.29 12 19.24"/><polygon points="5.64 8.29 7.05 9.71 12 4.76 16.95 9.71 18.36 8.29 12 1.93 5.64 8.29"/></svg>
                 </button>
               </div>
@@ -306,7 +319,7 @@
                   تفسير السعدي
               </div>
               <div class="tool-actions">
-                <button class="expander tool-collapse" >
+                <button class="tool-action tool-collapse" >
                   <?xml version="1.0" ?><svg height="20" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><polygon points="12 19.24 7.05 14.29 5.64 15.71 12 22.07 18.36 15.71 16.95 14.29 12 19.24"/><polygon points="5.64 8.29 7.05 9.71 12 4.76 16.95 9.71 18.36 8.29 12 1.93 5.64 8.29"/></svg>
                 </button>
               </div>
@@ -366,7 +379,7 @@
             <div class="tool-header">
               <div class="tool-title">محرك البحث</div>
               <div class="tool-actions">
-                <button class="expander tool-collapse">
+                <button class="tool-action tool-collapse">
                   <?xml version="1.0" ?><svg height="20" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><polygon points="12 19.24 7.05 14.29 5.64 15.71 12 22.07 18.36 15.71 16.95 14.29 12 19.24"/><polygon points="5.64 8.29 7.05 9.71 12 4.76 16.95 9.71 18.36 8.29 12 1.93 5.64 8.29"/></svg>
                 </button>
               </div>
@@ -388,7 +401,7 @@
             <div class="tool-header">
               <div class="tool-title">الفهرس</div>
               <div class="tool-actions">
-                <button class="expander tool-collapse">
+                <button class="tool-action tool-collapse">
                   <?xml version="1.0" ?><svg height="20" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><polygon points="12 19.24 7.05 14.29 5.64 15.71 12 22.07 18.36 15.71 16.95 14.29 12 19.24"/><polygon points="5.64 8.29 7.05 9.71 12 4.76 16.95 9.71 18.36 8.29 12 1.93 5.64 8.29"/></svg>
                 </button>
               </div>
