tafsir tool clarification

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
           </div>
 
-          <div class="tool tool-closed" style="height: calc(100% - 5px );"> 
+          <div class="tool tool-closed">
             <div class="tool-header">
               <div class="tool-title" title="تفسير السعدي">
                   تفسير السعدي
@@ -326,6 +326,7 @@
             </div>
             <div class="tool-body" style="padding: 0;">
               <div id="tafsir" class="tafsir">
+                إنقر على آية
               </div>
             </div>
           </div>
