rename the ajaa

--- a/index.html
+++ b/index.html
@@ -465,127 +465,127 @@
               <!-- result (list to selected from) -->
               <select class="filterAndSelector" name="filterAndSelector" multiple="multiple" id="filterAndSelector">
                 <option value="-3" data-part="fahrs">البداية</option>
-                <option value="001" data-part="juza">01 جزء الحمد (الفاتحة)</option>
+                <option value="001" data-part="juza">جزء 01 الحمد (الفاتحة)</option>
                 <option value="001" data-part="hizb">حزب 01</option>
                 <option value="001" data-part="sura">001 سورة الفاتحة</option>
                 <option value="002" data-part="sura">002 سورة البقرة</option>
                 <option value="011" data-part="hizb">حزب 02</option>
-                <option value="022" data-part="juza">02 جزء سيقول (البقرة)</option>
+                <option value="022" data-part="juza">جزء 02 سيقول (البقرة)</option>
                 <option value="022" data-part="hizb">حزب 03</option>
                 <option value="032" data-part="hizb">حزب 04</option>
-                <option value="042" data-part="juza">03 جزء تلك الرسل (البقرة)</option>
+                <option value="042" data-part="juza">جزء 03 تلك الرسل (البقرة)</option>
                 <option value="042" data-part="hizb">حزب 05</option>
                 <option value="050" data-part="sura">003 سورة آل عمران</option>
                 <option value="051" data-part="hizb">حزب 06</option>
-                <option value="062" data-part="juza">04 جزء كل الطعام (آل عمران)</option>
+                <option value="062" data-part="juza">جزء 04 كل الطعام (آل عمران)</option>
                 <option value="062" data-part="hizb">حزب 07</option>
                 <option value="072" data-part="hizb">حزب 08</option>
                 <option value="077" data-part="sura">004 سورة النساء</option>
-                <option value="082" data-part="juza">05 جزء والمحصنات (النساء)</option>
+                <option value="082" data-part="juza">جزء 05 والمحصنات (النساء)</option>
                 <option value="082" data-part="hizb">حزب 09</option>
                 <option value="092" data-part="hizb">حزب 10</option>
-                <option value="102" data-part="juza">06 جزء لا يحب الله (النساء)</option>
+                <option value="102" data-part="juza">جزء 06 لا يحب الله (النساء)</option>
                 <option value="102" data-part="hizb">حزب 11</option>
                 <option value="106" data-part="sura">005 سورة المائدة</option>
                 <option value="112" data-part="hizb">حزب 12</option>
-                <option value="121" data-part="juza">07 جزء لتجدن (المائدة)</option>
+                <option value="121" data-part="juza">جزء 07 لتجدن (المائدة)</option>
                 <option value="121" data-part="hizb">حزب 13</option>
                 <option value="128" data-part="sura">006 سورة الأنعام</option>
                 <option value="132" data-part="hizb">حزب 14</option>
-                <option value="142" data-part="juza">08 جزء و لو أنا أنزلنا (الأنعام)</option>
+                <option value="142" data-part="juza">جزء 08 و لو أنا أنزلنا (الأنعام)</option>
                 <option value="142" data-part="hizb">حزب 15</option>
                 <option value="151" data-part="hizb">حزب 16</option>
                 <option value="151" data-part="sura">007 سورة الأعراف</option>
-                <option value="162" data-part="juza">09 جزء قال الملأ (الأعراف)</option>
+                <option value="162" data-part="juza">جزء 09 قال الملأ (الأعراف)</option>
                 <option value="162" data-part="hizb">حزب 17</option>
                 <option value="173" data-part="hizb">حزب 18</option>
                 <option value="177" data-part="sura">008 سورة الأنفال</option>
-                <option value="182" data-part="juza">10 جزء و اعلموا (الأنفال)</option>
+                <option value="182" data-part="juza">جزء 10 و اعلموا (الأنفال)</option>
                 <option value="182" data-part="hizb">حزب 19</option>
                 <option value="187" data-part="sura">009 سورة التوبة</option>
                 <option value="192" data-part="hizb">حزب 20</option>
-                <option value="201" data-part="juza">11 جزء إنما السبيل (التوبة)</option>
+                <option value="201" data-part="juza">جزء 11 إنما السبيل (التوبة)</option>
                 <option value="201" data-part="hizb">حزب 21</option>
                 <option value="208" data-part="sura">010 سورة يونس</option>
                 <option value="212" data-part="hizb">حزب 22</option>
                 <option value="221" data-part="sura">011 سورة هود</option>
-                <option value="222" data-part="juza">12 جزء وما من دابة (هود)</option>
+                <option value="222" data-part="juza">جزء 12 وما من دابة (هود)</option>
                 <option value="222" data-part="hizb">حزب 23</option>
                 <option value="231" data-part="hizb">حزب 24</option>
                 <option value="235" data-part="sura">012 سورة يوسف</option>
-                <option value="242" data-part="juza">13 جزء وما أبرئ نفسي (يوسف)</option>
+                <option value="242" data-part="juza">جزء 13 وما أبرئ نفسي (يوسف)</option>
                 <option value="242" data-part="hizb">حزب 25</option>
                 <option value="249" data-part="sura">013 سورة الرعد</option>
                 <option value="252" data-part="hizb">حزب 26</option>
                 <option value="255" data-part="sura">014 سورة ابراهيم</option>
-                <option value="262" data-part="juza">14 جزء الر (الحجر)</option>
+                <option value="262" data-part="juza">جزء 14 الر (الحجر)</option>
                 <option value="262" data-part="hizb">حزب 27</option>
                 <option value="262" data-part="sura">015 سورة الحجر</option>
                 <option value="267" data-part="sura">016 سورة النحل</option>
                 <option value="272" data-part="hizb">حزب 28</option>
-                <option value="282" data-part="juza">15 جزء سبحان الذي (الإسراء)</option>
+                <option value="282" data-part="juza">جزء 15 سبحان الذي (الإسراء)</option>
                 <option value="282" data-part="hizb">حزب 29</option>
                 <option value="282" data-part="sura">017 سورة الإسراء</option>
                 <option value="292" data-part="hizb">حزب 30</option>
                 <option value="293" data-part="sura">018 سورة الكهف</option>
-                <option value="302" data-part="juza">16 جزء قال ألم (الكهف)</option>
+                <option value="302" data-part="juza">جزء 16 قال ألم (الكهف)</option>
                 <option value="302" data-part="hizb">حزب 31</option>
                 <option value="305" data-part="sura">019 سورة مريم</option>
                 <option value="312" data-part="hizb">حزب 32</option>
                 <option value="312" data-part="sura">020 سورة طه</option>
-                <option value="322" data-part="juza">17 جزء اقترب للناس (الأنبياء)</option>
+                <option value="322" data-part="juza">جزء 17 اقترب للناس (الأنبياء)</option>
                 <option value="322" data-part="hizb">حزب 33</option>
                 <option value="322" data-part="sura">021 سورة الأنبياء</option>
                 <option value="332" data-part="hizb">حزب 34</option>
                 <option value="332" data-part="sura">022 سورة الحج</option>
-                <option value="342" data-part="juza">18 جزء قد أفلح (المؤمنون)</option>
+                <option value="342" data-part="juza">جزء 18 قد أفلح (المؤمنون)</option>
                 <option value="342" data-part="hizb">حزب 35</option>
                 <option value="342" data-part="sura">023 سورة المؤمنون</option>
                 <option value="350" data-part="sura">024 سورة النور</option>
                 <option value="352" data-part="hizb">حزب 36</option>
                 <option value="359" data-part="sura">025 سورة الفرقان</option>
-                <option value="362" data-part="juza">19 جزء وقال الذين (الفرقان)</option>
+                <option value="362" data-part="juza">جزء 19 وقال الذين (الفرقان)</option>
                 <option value="362" data-part="hizb">حزب 37</option>
                 <option value="367" data-part="sura">026 سورة الشعراء</option>
                 <option value="371" data-part="hizb">حزب 38</option>
                 <option value="377" data-part="sura">027 سورة النمل</option>
-                <option value="382" data-part="juza">20 جزء فما كان (النمل)</option>
+                <option value="382" data-part="juza">جزء 20 فما كان (النمل)</option>
                 <option value="382" data-part="hizb">حزب 39</option>
                 <option value="385" data-part="sura">028 سورة القصص</option>
                 <option value="392" data-part="hizb">حزب 40</option>
                 <option value="396" data-part="sura">029 سورة العنكبوت</option>
-                <option value="402" data-part="juza">21 جزء ولا تجادلوا (العنكبوت)</option>
+                <option value="402" data-part="juza">جزء 21 ولا تجادلوا (العنكبوت)</option>
                 <option value="402" data-part="hizb">حزب 41</option>
                 <option value="404" data-part="sura">030 سورة الروم</option>
                 <option value="411" data-part="sura">031 سورة لقمان</option>
                 <option value="413" data-part="hizb">حزب 42</option>
                 <option value="415" data-part="sura">032 سورة السجدة</option>
                 <option value="418" data-part="sura">033 سورة الأحزاب</option>
-                <option value="422" data-part="juza">22 جزء ومن يقنت (الأحزاب)</option>
+                <option value="422" data-part="juza">جزء 22 ومن يقنت (الأحزاب)</option>
                 <option value="422" data-part="hizb">حزب 43</option>
                 <option value="428" data-part="sura">034 سورة سبأ</option>
                 <option value="431" data-part="hizb">حزب 44</option>
                 <option value="434" data-part="sura">035 سورة فاطر</option>
                 <option value="440" data-part="sura">036 سورة يس</option>
-                <option value="442" data-part="juza">23 جزء وما أنزلنا على قومه (يس)</option>
+                <option value="442" data-part="juza">جزء 23 وما أنزلنا على قومه (يس)</option>
                 <option value="442" data-part="hizb">حزب 45</option>
                 <option value="446" data-part="sura">037 سورة الصافات</option>
                 <option value="451" data-part="hizb">حزب 46</option>
                 <option value="453" data-part="sura">038 سورة سورة ص</option>
                 <option value="458" data-part="sura">039 سورة الزمر</option>
-                <option value="462" data-part="juza">24 جزء فمن أظلم (الزمر)</option>
+                <option value="462" data-part="juza">جزء 24 فمن أظلم (الزمر)</option>
                 <option value="462" data-part="hizb">حزب 47</option>
                 <option value="467" data-part="sura">040 سورة غافر</option>
                 <option value="472" data-part="hizb">حزب 48</option>
                 <option value="477" data-part="sura">041 سورة فصلت</option>
-                <option value="482" data-part="juza">25 جزء إليه يرد (فصلت)</option>
+                <option value="482" data-part="juza">جزء 25 إليه يرد (فصلت)</option>
                 <option value="482" data-part="hizb">حزب 49</option>
                 <option value="483" data-part="sura">042 سورة الشورى</option>
                 <option value="489" data-part="sura">043 سورة الزخرف</option>
                 <option value="491" data-part="hizb">حزب 50</option>
                 <option value="496" data-part="sura">044 سورة الدخان</option>
                 <option value="499" data-part="sura">045 سورة الجاثية</option>
-                <option value="502" data-part="juza">26 جزء حم تنزيل (الأحقاف)</option>
+                <option value="502" data-part="juza">جزء 26 حم تنزيل (الأحقاف)</option>
                 <option value="502" data-part="hizb">حزب 51</option>
                 <option value="502" data-part="sura">046 سورة الأحقاف</option>
                 <option value="507" data-part="sura">047 سورة محمد</option>
@@ -594,7 +594,7 @@
                 <option value="515" data-part="sura">049 سورة الحجرات</option>
                 <option value="518" data-part="sura">050 سورة سورة ق</option>
                 <option value="520" data-part="sura">051 سورة الذاريات</option>
-                <option value="522" data-part="juza">27 جزء قال فما خطبكم (الذاريات)</option>
+                <option value="522" data-part="juza">جزء 27 قال فما خطبكم (الذاريات)</option>
                 <option value="522" data-part="hizb">حزب 53</option>
                 <option value="523" data-part="sura">052 سورة الطور</option>
                 <option value="526" data-part="sura">053 سورة النجم</option>
@@ -603,7 +603,7 @@
                 <option value="531" data-part="sura">055 سورة الرحمن</option>
                 <option value="534" data-part="sura">056 سورة الواقعة</option>
                 <option value="537" data-part="sura">057 سورة الحديد</option>
-                <option value="542" data-part="juza">28 جزء قد سمع (المجادلة)</option>
+                <option value="542" data-part="juza">جزء 28 قد سمع (المجادلة)</option>
                 <option value="542" data-part="hizb">حزب 55</option>
                 <option value="542" data-part="sura">058 سورة المجادلة</option>
                 <option value="545" data-part="sura">059 سورة الحشر</option>
@@ -615,7 +615,7 @@
                 <option value="556" data-part="sura">064 سورة التغابن</option>
                 <option value="558" data-part="sura">065 سورة الطلاق</option>
                 <option value="560" data-part="sura">066 سورة التحريم</option>
-                <option value="562" data-part="juza">29 جزء تبارك (الملك)</option>
+                <option value="562" data-part="juza">جزء 29 تبارك (الملك)</option>
                 <option value="562" data-part="hizb">حزب 57</option>
                 <option value="562" data-part="sura">067 سورة الملك</option>
                 <option value="564" data-part="sura">068 سورة القلم</option>
@@ -629,7 +629,7 @@
                 <option value="577" data-part="sura">075 سورة القيامة</option>
                 <option value="578" data-part="sura">076 سورة الإنسان</option>
                 <option value="580" data-part="sura">077 سورة المرسلات</option>
-                <option value="582" data-part="juza">30 جزء عمّ يتساءلون (النبأ)</option>
+                <option value="582" data-part="juza">جزء 30 عمّ يتساءلون (النبأ)</option>
                 <option value="582" data-part="hizb">حزب 59</option>
                 <option value="582" data-part="sura">078 سورة النبأ</option>
                 <option value="583" data-part="sura">079 سورة النازعات</option>
