--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <div></div>
             <div class="main-navigation-l-menu">
               
-              <button id="left-menu-button" title="إظهار و إخفاء القائمة اليسرى (Shift)" >
+              <button id="left-menu-button" title="إظهار و إخفاء القائمة اليسرى (ctrl)" >
                 <svg height="20px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16"> <g clip-path="url(#clip0)"> <path fill="#000" fill-rule="evenodd" d="M4 1a1 1 0 00-1 1v3.776c-.346.036-.68.109-1 .215V2a2 2 0 012-2h3.879a2 2 0 011.414.586l4.121 4.121A2 2 0 0114 6.121V14a2 2 0 01-2 2h-1.825a1.758 1.758 0 000-1H12a1 1 0 001-1V6.121a1 1 0 00-.293-.707L8.586 1.293A1 1 0 007.879 1H4zM5.394 12.396a.5.5 0 01.707 0l2.75 2.75a.5.5 0 01-.707.708l-2.75-2.75a.5.5 0 010-.708z" clip-rule="evenodd"/> <path fill="#000" fill-rule="evenodd" d="M3.498 13a2.5 2.5 0 100-5 2.5 2.5 0 000 5zm0 1a3.5 3.5 0 100-7 3.5 3.5 0 000 7zM8 4V.5h1V4a1 1 0 001 1h3.5v1H10a2 2 0 01-2-2z" clip-rule="evenodd"/> </g> <defs> <clipPath id="clip0"> <path fill="#fff" d="M0 0h16v16H0z"/> </clipPath> </defs> </svg>
               </button>
             </div>
