--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                   مصدر مجلد المصاحف (أترك القيمة فارغة من أجل إستخدام القيمة الإفتراضية)
                 </div>
                 <div class="setting-body">
-                  <button id="open">اختر مجلد محلي تتواجد به المصاحف</button>
-                  <input hidden class="setting-mushaf-url" id="setting-mushafs-folder" type="url" placeholder="file:///D:/quran/qurans/" >
+                  <input class="setting-mushaf-url" id="setting-mushafs-folder" type="url" placeholder="file:///D:/quran/qurans/" >
                 </div>
               </div>
             </div>
@@ -364,7 +363,9 @@
               <button id="night-toggle-button" title="تشغيل و إيقاف الوضع المظلم">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20" height="20" viewBox="0 0 256 256" xml:space="preserve"> <defs> </defs> <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" > <path d="M 89.634 59.683 c -0.338 -0.276 -0.816 -0.302 -1.184 -0.062 c -16.514 10.864 -38.661 8.589 -52.661 -5.41 C 21.79 40.212 19.515 18.065 30.38 1.551 c 0.24 -0.366 0.215 -0.845 -0.062 -1.183 c -0.277 -0.339 -0.741 -0.46 -1.148 -0.294 c -5.826 2.349 -11.048 5.809 -15.523 10.283 c -18.195 18.195 -18.195 47.802 0 65.997 C 22.744 85.451 34.695 90 46.645 90 c 11.951 0 23.901 -4.549 32.999 -13.646 c 4.475 -4.476 7.935 -9.699 10.284 -15.523 C 90.091 60.425 89.972 59.96 89.634 59.683 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" /> <path d="M 77.254 40.17 c -4.894 -1.63 -8.788 -5.525 -10.42 -10.419 c -0.27 -0.81 -0.992 -1.334 -1.841 -1.334 c -0.848 0 -1.571 0.524 -1.84 1.335 c -1.631 4.893 -5.526 8.787 -10.419 10.418 c -0.811 0.27 -1.334 0.993 -1.334 1.841 c 0 0.848 0.524 1.571 1.334 1.841 c 4.894 1.631 8.788 5.525 10.418 10.419 h 0.001 c 0.27 0.811 0.992 1.334 1.84 1.334 c 0.849 0 1.572 -0.524 1.841 -1.334 c 1.631 -4.893 5.526 -8.788 10.419 -10.419 c 0.812 -0.27 1.335 -0.992 1.335 -1.841 C 78.588 41.162 78.064 40.439 77.254 40.17 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" /> <path d="M 81.635 11.577 c -2.597 -0.865 -4.664 -2.932 -5.53 -5.529 c -0.208 -0.626 -0.789 -1.046 -1.446 -1.046 c -0.657 0 -1.239 0.421 -1.448 1.047 c -0.864 2.596 -2.93 4.663 -5.527 5.528 c -0.626 0.208 -1.047 0.789 -1.047 1.446 s 0.421 1.238 1.046 1.446 c 2.596 0.865 4.663 2.932 5.529 5.529 c 0.208 0.625 0.788 1.046 1.445 1.047 c 0.001 0 0.001 0 0.002 0 c 0.656 0 1.238 -0.421 1.446 -1.046 c 0.866 -2.597 2.933 -4.664 5.53 -5.529 c 0.625 -0.209 1.046 -0.79 1.046 -1.446 C 82.681 12.367 82.26 11.786 81.635 11.577 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" /> <path d="M 52.274 18.689 c -3.232 -1.076 -5.805 -3.649 -6.882 -6.881 c -0.224 -0.674 -0.849 -1.126 -1.556 -1.126 c -0.706 0 -1.331 0.453 -1.556 1.126 c -1.077 3.232 -3.649 5.804 -6.881 6.881 c -0.674 0.224 -1.126 0.849 -1.126 1.556 s 0.453 1.331 1.126 1.556 c 3.232 1.077 5.805 3.65 6.881 6.882 c 0.224 0.674 0.849 1.126 1.556 1.126 c 0.706 0 1.331 -0.453 1.556 -1.126 c 1.077 -3.232 3.649 -5.805 6.881 -6.882 c 0.674 -0.224 1.127 -0.849 1.127 -1.556 S 52.947 18.913 52.274 18.689 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" /> </g> </svg>
               </button>
-
+              <button id="mushafview-toggle-button" title="تشغيل و إيقاف وضع المصحف الورقي">
+                <svg height="20px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16"> <path fill="#000" fill-rule="evenodd" d="M8 2.5a.5.5 0 00-.5-.5H2a2 2 0 00-2 2v8a2 2 0 002 2h5.5a.5.5 0 000-1H2a1 1 0 01-1-1V4a1 1 0 011-1h5.5a.5.5 0 00.5-.5zM16 4a2 2 0 00-2-2H9.5a.5.5 0 00-.5.5v11a.5.5 0 00.5.5H14a2 2 0 002-2V4zm-2-1a1 1 0 011 1v8a1 1 0 01-1 1h-4V3h4z" clip-rule="evenodd"/> <path fill="#000" fill-rule="evenodd" d="M11 6.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0 2a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0 2a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd"/> </svg>
+              </button>
             </div>
             <div><button id="privouos">➡️ السابقة</button></div>
           </div>
@@ -373,9 +374,7 @@
             <div><button id="next">التالـيـة ⬅️</button></div>
             <div></div>
             <div class="main-navigation-l-menu">
-              <button id="mushafview-toggle-button" title="تشغيل و إيقاف وضع المصحف الورقي">
-                <svg height="20px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16"> <path fill="#000" fill-rule="evenodd" d="M8 2.5a.5.5 0 00-.5-.5H2a2 2 0 00-2 2v8a2 2 0 002 2h5.5a.5.5 0 000-1H2a1 1 0 01-1-1V4a1 1 0 011-1h5.5a.5.5 0 00.5-.5zM16 4a2 2 0 00-2-2H9.5a.5.5 0 00-.5.5v11a.5.5 0 00.5.5H14a2 2 0 002-2V4zm-2-1a1 1 0 011 1v8a1 1 0 01-1 1h-4V3h4z" clip-rule="evenodd"/> <path fill="#000" fill-rule="evenodd" d="M11 6.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0 2a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0 2a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd"/> </svg>
-              </button>
+              
               <button id="left-menu-button" title="إظهار و إخفاء القائمة اليسرى (ctrl)" >
                 <svg height="20px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16"> <g clip-path="url(#clip0)"> <path fill="#000" fill-rule="evenodd" d="M4 1a1 1 0 00-1 1v3.776c-.346.036-.68.109-1 .215V2a2 2 0 012-2h3.879a2 2 0 011.414.586l4.121 4.121A2 2 0 0114 6.121V14a2 2 0 01-2 2h-1.825a1.758 1.758 0 000-1H12a1 1 0 001-1V6.121a1 1 0 00-.293-.707L8.586 1.293A1 1 0 007.879 1H4zM5.394 12.396a.5.5 0 01.707 0l2.75 2.75a.5.5 0 01-.707.708l-2.75-2.75a.5.5 0 010-.708z" clip-rule="evenodd"/> <path fill="#000" fill-rule="evenodd" d="M3.498 13a2.5 2.5 0 100-5 2.5 2.5 0 000 5zm0 1a3.5 3.5 0 100-7 3.5 3.5 0 000 7zM8 4V.5h1V4a1 1 0 001 1h3.5v1H10a2 2 0 01-2-2z" clip-rule="evenodd"/> </g> <defs> <clipPath id="clip0"> <path fill="#fff" d="M0 0h16v16H0z"/> </clipPath> </defs> </svg>
               </button>
@@ -703,7 +702,6 @@
     <script src="./src/swiped-events.min.js" type="text/javascript"></script>
     <script src="./src/quran.js" type="text/javascript"></script>
     <script src="./src/tafsir.js" type="text/javascript"></script>
-    <script src="./src/indexedDB.js" type="text/javascript"></script>
     <script src="./src/main.js" type="text/javascript"></script>
   </body>
 </html>
