--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                   </div>
                   إذا واجهت مشكلة "جاري التحميل" غير الصفحة رجاءا
-                  <button id="open">اختر مجلد محلي تتواجد به المصاحف، (إذا كان المجلد فارغا، يتحمل فيه كل وجه تم تصفحه)</button>
+                  <button id="openFolder">اختر مجلد محلي تتواجد به المصاحف، (إذا كان المجلد فارغا، يتحمل فيه كل وجه تم تصفحه)</button>
                 </div>
               </div>
             </div>
