--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             </div>
             <div class="tool-body" style="padding: 0;">
-              <div style="padding: 5px; border-bottom: 2px solid #6c6c6c; display: flex;justify-content: space-between;">
+              <div class="hidden" style="padding: 5px; border-bottom: 2px solid #6c6c6c; display: flex;justify-content: space-between;">
               مقارنة مع
                 <select class="comparison-selector" name="comparisonSelector" id="comparisonSelector">
                   <option value="R111" >قالون - قصر المنفصل وإسكان الميم</option>
