--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div class="quran-container">
           <div class="permission">
             تجديد إمداد الصلاحية 
-            <button id="permission" style="padding: 5px;">
+            <button id="permission" style="padding: 5px; border-radius: var(--radius);">
               إقرأ من الملفات المحفوظة
             </button>
           </div>
@@ -456,7 +456,10 @@
             </div>
             <div><button id="privouos">➡️ السابقة</button></div>
           </div>
-          <div class="as-m"><input id="page" inputmode="numeric" type="search" placeholder="الصفحة"min="-3" ></div>
+          <div class="as-m">
+            <input id="page" inputmode="numeric" type="search" placeholder="الصفحة" min="-3" >
+            <button>ok</button>
+          </div>
           <div class="as-a">
             <div><button id="next">التالـيـة ⬅️</button></div>
             <div class="main-navigation-l-menu">
