--- a/index.html
+++ b/index.html
@@ -461,7 +461,11 @@
           </div>
           <div class="as-m">
             <input id="page" inputmode="numeric" type="search" placeholder="الصفحة" min="-3" >
-            <button>ok</button>
+            <button>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16">
+                <path fill="#000" fill-rule="evenodd" d="M6.078 9.77c.062.085.128.168.195.25l-4.127 4.126a.5.5 0 00.708.708l4.126-4.127A5.5 5.5 0 108.922 1.23c.206.278.387.576.538.89a4.5 4.5 0 11-2.419 7.258c-.305.16-.628.292-.963.392z" clip-rule="evenodd"/>
+              </svg>
+            </button>
           </div>
           <div class="as-a">
             <div><button id="next">التالـيـة ⬅️</button></div>
