- close left and right menu by clicking on the edges - search using button to remove the lag of multiple seach triggred by the input change event

--- a/index.html
+++ b/index.html
@@ -569,9 +569,13 @@
             </div>
             <div class="tool-body">
               <div class="searchbox" id="searchbox">
-                <!-- search input  -->
-                <label hidden>searchbox-input</label>
-                <input placeholder="البحث في المصحف، 5 أحرف أو أكثر" id="searchbox-input" type="search" />
+                <div>
+                  <label hidden>searchbox-input</label>
+                  <button id="go-search">
+                    <svg width="20px" height="20px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="m12 2c-5.5 0-10 4.5-10 10s4.5 10 10 10c2.2 0 4.3-.7 6-2l9 10 3-3-10-9c1.3-1.7 2-3.8 2-6 0-5.5-4.5-10-10-10zm0 3c3.9 0 7 3.1 7 7s-3.1 7-7 7-7-3.1-7-7 3.1-7 7-7z" /></svg>
+                  </button>
+                  <input placeholder="البحث في المصحف، 5 أحرف أو أكثر" id="searchbox-input" type="search" />
+                </div>
 
                 <!-- Search result -->
                 <div class="results" id="results"></div>
@@ -579,7 +583,7 @@
             </div>
           </div>
           <!-- finder (search tool) -->
-          <div class="tool" style="height: calc(100% - 85px)">
+          <div class="tool" style="height: calc(100% - 84px)">
             <div class="tool-header">
               <div class="tool-title">الفهرس</div>
               <div class="tool-actions">
